--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "fastify": "^4.27.0"
+    "@fastify/multipart": "^8.3.0",
+    "fastify": "^4.28.1",
+    "http-status": "^1.7.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -16,9 +18,11 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "pino-pretty": "^11.2.2",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5"
-  }
+    "typescript": "^5.5.4"
+  },
+  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
