--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@fastify/multipart": "^8.3.0",
     "fastify": "^4.28.1",
-    "http-status": "^1.7.4"
+    "http-status": "^1.7.4",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
+    "@types/pdf-parse": "^1.1.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^7.32.0",
