--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fastify/multipart": "^8.3.0",
     "fastify": "^4.28.1",
+    "firebase": "^10.13.0",
     "http-status": "^1.7.4",
     "pdf-parse": "^1.1.1"
   },
