--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fastify": "^4.28.1",
     "firebase": "^10.13.0",
     "http-status": "^1.7.4",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/pdf-parse": "^1.1.4",
