--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fastify": "^4.28.1",
     "firebase": "^10.13.0",
     "http-status": "^1.7.4",
-    "pdf-parse": "^1.1.1",
+    "pdf.js-extract": "^0.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
