--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@fastify/multipart": "^8.3.0",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/multipart": "^9.0.1",
     "@google-cloud/text-to-speech": "^5.4.0",
-    "fastify": "^4.28.1",
+    "fastify": "^5.0.0",
     "firebase": "^10.13.0",
     "http-status": "^1.7.4",
     "pdf.js-extract": "^0.2.1",
